Создано с помощью Colaboratory

--- a/Lesson_4.ipynb
+++ b/Lesson_4.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Копия блокнота \"Lesson 4.ipynb\"\"",
+      "name": "Копия блокнота \"Копия блокнота \"Lesson 4.ipynb\"\"\"",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMBPleRscnh+G2lJP3kXeZR",
+      "authorship_tag": "ABX9TyOazu38F7YlScoH5nIWvpsc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1310,6 +1310,44 @@
       },
       "source": [
         "Что-то никак не могу понять, почему он не хочет работать на 3 ветках. На 2 же работал..."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "o5su9s1HwXh0"
+      },
+      "source": [
+        " \r\n",
+        "\r\n",
+        "---\r\n",
+        "\r\n",
+        "---\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7V0bkucIwXeP"
+      },
+      "source": [
+        "В процессе выполнения возникли вопросы."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BYOIr4zdwXVF"
+      },
+      "source": [
+        "1. Почему не стоит делать слой конкотинации сразу после слоев Dropout (сеть вылетает с ошибкой)?\r\n",
+        "\r\n",
+        "2. Попыталась сделать 2 подряд слоя конволюции с понижением количества нейронов (128 -> 64), тоже начал странно ругаться. Причину не нашла.\r\n",
+        "\r\n",
+        "3. Да и в принципе так и не нашла вариант, который принципиально мог бы повысить точность((("
       ]
     }
   ]
